tests/errors/removematch/string-literal-left-open/test.fbfrog
a.h -removematch 'abc "123'
